[package]
name = "rocksdb-utils-lookup"
version = "0.4.0"
edition = "2021"
authors = ["Manuel Holtgrewe <manuel.holtgrewe@bih-charite.de>"]
description = "Utilities for using RocksDB as read-only lookup table (after initial bulk import)."
license = "Apache-2.0"
homepage = "https://github.com/bihealth/rocksdb-utils-lookup"
readme = "README.md"

[lib]
name = "rocksdb_utils_lookup"
path = "src/lib.rs"

[dependencies]
rocksdb = { version = "0.22.0", features = ["multi-threaded-cf"] }
thiserror = "2.0"
tracing = "0.1"

[dev-dependencies]
anyhow = "1.0"
temp_testdir = "0.2.3"
